@@ -5,6 +5,7 @@
 * Raise exception when re-using a closed container.
 * Move caml_remove_generational_global_root to ocaml finalizers
   to follow OCaml 5 memory model.
+* Added `Avutil.Frame.{duration, set_duration}`
 
 1.1.7 (2023-02-08)
 =====
